--- a/cv.html
+++ b/cv.html
@@ -126,6 +126,7 @@
         <div class="property">Doctoral thesis' title:</div><div class="value"><em>Condition and Homology in Semialgebraic Geometry</em></div>
         <div class="property">Doctoral supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
+        <div class="property">Grade:</div><div class="value"><i>mit Auszeichnung bestanden</i> (cumma cum laude)</div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duration:</div><div class="value">January 2017 - November 2019</div>
@@ -448,6 +449,19 @@
       <br><div class="row"><div class="col-md-12">
       <h3>Conference presentations</h3>
       </div></div>
+
+      <!-- 2020
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <br><div class="cv">
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Computing the homology of semialgebraic sets in weak single exponential time</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Real zeros of random fewnomials</div>
+         </div>
 
 <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
@@ -982,7 +996,28 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br><div class="cv">
          <div class="year">
+         <h4>2020</h4>
+         </div><div class="title">
+         <h4>&emsp;Research visit to <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
+           <div class="property">Objective:</div><div class="value">Discussion for future projects</div>
+           <div class="property">Institution:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
+           <div class="property">Location:</div><div class="value">Paris, France</div>
+           <div class="property">Date:</div><div class="value">19th to the 25th of December of 2020</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year">
          <h4>2019</h4>
+         </div><div class="title">
+         <h4>&emsp;Research visit to <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
+           <div class="property">Objective:</div><div class="value">Discussion for future projects</div>
+           <div class="property">Institution:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
+           <div class="property">Location:</div><div class="value">Paris, France</div>
+           <div class="property">Date:</div><div class="value">8th to 12th of December of 2019</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year">
          </div><div class="title">
          <h4>&emsp;Research visit to <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
            <div class="property">Objective:</div><div class="value">Discussion for future projects</div>
@@ -993,7 +1028,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br><div class="cv">
          <div class="year">
-
          </div><div class="title">
          <h4>&emsp;Research stay with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> in Hong Kong</h4></div>
            <div class="property">Objective:</div><div class="value">Working with one of the doctoral supervisors</div>
@@ -1064,6 +1098,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    </div></div>
 
 <!-- To come
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="jovenesrsme2020"></span>
+<br><div class="cv">
+<div class="year">
+  <h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://jovenesrsme2020.com/">V Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(V Conference of Young Researcher of the Spanish Royal Mathematical Society)</em></h4></div>
+  <div class="property">Organizer:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"></div>
+  <div class="property">Location:</div><div class="value">Castelló, Spain</div>
+  <div class="property">Date:</div><div class="value">27th to 31st of January of 2020</div>
+</div>
+
+<!-- 2019
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="openingeinstein"></span>
@@ -1175,9 +1226,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    </div>
 
 
-<!-- 2019
-YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
-
    <span id="7BMSStudConf"></span>
    <br><div class="cv">
    <div class="year">
@@ -1205,7 +1253,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <span id="rsme2019"></span>
    <br><div class="cv">
    <div class="year">
-
    </div><div class="title">
    <h4>&emsp;<a href="https://2019.bienalrsme.com/">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2019</a></h4></div>
    <div class="year"></div><div class="title">
