--- a/cv_es.html
+++ b/cv_es.html
@@ -128,6 +128,7 @@
         <div class="property">Título de la tesis doctoral:</div><div class="value"><a href="doctoralthesis_es.html"><em>Condition and Homology in Semialgebraic Geometry</em></a></div>
         <div class="property">Supervisores doctorales:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
+        <div class="property">Nota:</div><div class="value"><i>mit Auszeichnung bestanden</i> (cumma cum laude)</div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019</div>
@@ -430,6 +431,19 @@
       <h3>Ponencias en conferencias</h3>
       </div></div>
 
+      <!-- 2020
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <br><div class="cv">
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Computing the homology of semialgebraic sets in weak single exponential time</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#jovenesrsme2020">V Conferencia de Jóvenes Investigadores de la RSME</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Real zeros of random fewnomials</div>
+         </div>
+
 <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -635,6 +649,8 @@
    <h2 class="display-4">Actividades organizadas</h2>
    </div></div>
 
+   <!-- 2019
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
    <span id="WhatIsSeminar"></span>
    <br><div class="cv">
@@ -650,8 +666,7 @@
      <div class="property">Fecha:</div><div class="value">Desde abril del 2016</div>
    </div>
 
-<!-- 2019
-YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
 
   <span id="SIAMAG2019Symposium"></span>
    <br><div class="cv">
@@ -975,6 +990,28 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br><div class="cv">
          <div class="year">
+         <h4>2020</h4>
+         </div><div class="title">
+         <h4>&emsp;Visita investigadora a <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
+           <div class="property">Objetivo:</div><div class="value">Discusión de futuros projectos</div>
+           <div class="property">Institución:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
+           <div class="property">Lugar:</div><div class="value">París, Francia</div>
+           <div class="property">Fecha:</div><div class="value">del 19 al 25 de diciembre del 2020</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year">
+         <h4>2019</h4>
+         </div><div class="title">
+         <h4>&emsp;Visita investigadora a <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> in Paris</h4></div>
+           <div class="property">Objetivo:</div><div class="value">Discusión de futuros projectos</div>
+           <div class="property">Institución:</div><div class="value"><a href="https://team.inria.fr/ouragan/">OURAGAN (Outils de Résolution Algébriques pour la Géométrie et ses ApplicatioNs)</a></div>
+           <div class="property">Lugar:</div><div class="value">París, Francias</div>
+           <div class="property">Fecha:</div><div class="value">del 8 al 12 de diciembre del 2019</div>
+         </div>
+
+         <br><div class="cv">
+         <div class="year">
          <h4>2019</h4>
          </div><div class="title">
          <h4>&emsp;Visita investigadora a <a href="https://www-polsys.lip6.fr/~elias/">Elias Tsigaridas</a> en Francia</h4></div>
@@ -1054,6 +1091,21 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    </div></div>
 
 <!-- To come
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="jovenesrsme2020"></span>
+<br><div class="cv">
+<div class="year">
+<h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://jovenesrsme2020.com/">V Congreso de Jóvenes Investigadores de la RSME</a></h4></div>
+  <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.uji.es/">Universit Jaume I</a></div>
+  <div class="property">Lugar:</div><div class="value">Castelló, España</div>
+  <div class="property">Fecha:</div><div class="value">del 27 al 31 de enero del 2020</div>
+</div>
+
+<!-- 2019
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="openingeinstein"></span>
@@ -1176,8 +1228,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    </div>
 
 
-<!-- 2019
-YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
 
    <span id="7BMSStudConf"></span>
    <br><div class="cv">
@@ -1204,7 +1255,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="property">Organizador:</div><div class="value">Tim Seynnaeve, Rodica Dinu, Giulia Codenotti y Frank R&ouml;ttger</div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.mis.mpg.de/">Max-Plank-Institut f&uuml;r Mathematik in der Naturwissenschaften</a></div>
      <div class="property">Lugar:</div><div class="value">Leipzig, Alemania</div>
-     <div class="property">Fecha:</div><div class="value">del 18 al 20 de febrero de 2019</div>
+     <div class="property">Fecha:</div><div class="value">del 18 al 20 de febrero del 2019</div>
    </div>
 
    <span id="rsme2019"></span>
@@ -1216,7 +1267,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://web.unican.es/">Universidad de Cantabria (UC)</a></div>
      <div class="property">Lugar:</div><div class="value">Santander, España</div>
-     <div class="property">Fecha:</div><div class="value">del 4 al 8 de febrero de 2019</div>
+     <div class="property">Fecha:</div><div class="value">del 4 al 8 de febrero del 2019</div>
    </div>
 
    <span id="Nesin2019"></span>
@@ -1230,7 +1281,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="property">Organizador:</div><div class="value">Ali Ulaş Özgür Kişisel</div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="http://www.nesinkoyleri.org">Nesin Matematik Köyü (Nesin Mathematical Village)</a></div>
      <div class="property">Lugar:</div><div class="value">Nesin Matematik Köyü, Turkey</div>
-     <div class="property">Fecha:</div><div class="value">del 21 al 27 de enero de 2019</div>
+     <div class="property">Fecha:</div><div class="value">del 21 al 27 de enero del 2019</div>
    </div>
 
 <!-- 2018
