--- a/cv.html
+++ b/cv.html
@@ -465,8 +465,15 @@
 
 <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+
+   <br><div class="cv">
+   <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#ncyprus2019">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+     <div class="pretalktitle"></div><div class="talktitle">On zeros of random fewnomials (2 talks)</div>
+   </div>
+
 <br><div class="cv">
-<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Link to the video</a></span></h4></div>
+<div class="year"></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Link to the video</a></span></h4></div>
  <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a></div>
 </div>
 
@@ -675,20 +682,31 @@
    <div class="year">
    <h4>2016-19</h4>
    </div><div class="title">
-   <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a> (currently)</h4></div>
+   <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
      <div class="property">Description:</div><div class="value">Student organised seminar where a new concept, idea or object is introduced in each session</div>
      <div class="property">Role:</div><div class="value">Co-organizer, web-designer and video management</div>
      <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
-     <div class="property">Date:</div><div class="value">Since April of 2016</div>
+     <div class="property">Date:</div><div class="value">April of 2016 -to December of 2019</div>
    </div>
 
 <!-- 2019
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="ncyprus2019"></span>
+<br><div class="cv">
+<div class="year">
+<h4>2019</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk and Josué Tonelli-Cueto</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
+  <div class="property">Location:</div><div class="value">Güzelyurt, Northern Cyprus</div>
+  <div class="property">Date:</div><div class="value">21st to 26th of October of 2019</div>
+</div>
+
   <span id="SIAMAG2019Symposium"></span>
    <br><div class="cv">
    <div class="year">
-   <h4>2019</h4>
    </div><div class="title">
    <h4>&emsp;Minisymposium <em>Numerical methods for structured polynomial system solving</em></h4></div>
    <div class="year"></div><div class="title">
@@ -1109,7 +1127,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(V Conference of Young Researcher of the Spanish Royal Mathematical Society)</em></h4></div>
   <div class="property">Organizer:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
-  <div class="property">Hosting Institution:</div><div class="value"></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uji.es/">Universit Jaume I</a></div>
   <div class="property">Location:</div><div class="value">Castelló, Spain</div>
   <div class="property">Date:</div><div class="value">27th to 31st of January of 2020</div>
 </div>
