--- a/cv_es.html
+++ b/cv_es.html
@@ -447,8 +447,13 @@
 <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+   <br><div class="cv">
+   <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#ncyprus2019">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+     <div class="pretalktitle"></div><div class="talktitle">On zeros of random fewnomials (dos charlas)</div>
+   </div>
+
 <br><div class="cv">
-<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Enlace al vídeo</a></span></h4></div>
+<div class="year"></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Enlace al vídeo</a></span></h4></div>
   <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a></div>
 </div>
 
@@ -657,21 +662,34 @@
    <div class="year">
    <h4>2016-19</h4>
    </div><div class="title">
-   <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a> (actualmente)</h4></div>
+   <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
    <div class="year"></div><div class="title">
    <h4>&ensp;&emsp;<em>(Seminario &ldquo;¿Qué es...?&rdquo;)</em></h4></div>
      <div class="property">Descripción:</div><div class="value">Seminario organizado por estudiantes donde se una nueva idea, concepto u objeto se introduce en cada sesión</div>
      <div class="property">Papel:</div><div class="value">Co-organizador, diseñador web y coordinación de los vídeos</div>
      <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
-     <div class="property">Fecha:</div><div class="value">Desde abril del 2016</div>
+     <div class="property">Fecha:</div><div class="value">De abril del 2016 a diciembre del 2019</div>
    </div>
 
+
+   <span id="ncyprus2019"></span>
+   <br><div class="cv">
+   <div class="year">
+   <h4>2019</h4>
+   </div><div class="title">
+   <h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+   <div class="year"></div><div class="title">
+   <h4>&ensp;&emsp;<em>(Taller de Investigación en Geometría Algebraica Real Aleatoria</em>)</em></h4></div>
+     <div class="property">Organizador:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk and Josué Tonelli-Cueto</div>
+     <div class="property">Institución anfitriona:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
+     <div class="property">Lugar:</div><div class="value">Güzelyurt, Northern Cyprus</div>
+     <div class="property">Fecha:</div><div class="value">del 21 al 26 de octubre del 2019</div>
+   </div>
 
 
   <span id="SIAMAG2019Symposium"></span>
    <br><div class="cv">
    <div class="year">
-   <h4>2019</h4>
    </div><div class="title">
    <h4>&emsp;Minisymposium <em>Numerical methods for structured polynomial system solving</em></h4></div>
    <div class="year"></div><div class="title">
