--- a/cv.html
+++ b/cv.html
@@ -122,11 +122,11 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;Doctorate in Mathematics <span style="float:right;"><a href="doctoralthesis.html">Doctoral thesis</a></span></h4></div>
+      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;Dr. rer. nat. Mathematik (PhD in Mathematics)<span style="float:right;"><a href="doctoralthesis.html">Doctoral thesis</a></span></h4></div>
         <div class="property">Doctoral thesis' title:</div><div class="value"><em>Condition and Homology in Semialgebraic Geometry</em></div>
         <div class="property">Doctoral supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
-        <div class="property">Grade:</div><div class="value"><i>mit Auszeichnung bestanden</i> (cumma cum laude)</div>
+        <div class="property">Grade:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duration:</div><div class="value">January 2017 - November 2019</div>
@@ -136,7 +136,7 @@
       <div class="year"><h4>2014-17</h4></div><div class="title"><h4>&emsp;M.Sc. Mathematik <em>(M.Sc. Mathematics)</em></h4></div>
         <div class="property">M.'s thesis' title:</div><div class="value"><em>On the Complexity of some Null-Cone Membership Problems</em></div>
         <div class="property">M.'s thesis' supervisor:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
-        <div class="property">Average grade:</div><div class="value">1.0<a href="#grades">*</a> </div>
+        <div class="property">Average grade:</div><div class="value">1.0<a href="#grades">**</a> </div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duration:</div><div class="value">October 2014 - March 2017</div>
@@ -147,15 +147,16 @@
         <div class="property">Recognitions:</div><div class="value">Best Student Record</div>
         <div class="property"></div><div class="value"><a href="#extraordinaryaward">End of Degree Extraordinary Award</a></div>
         <div class="property"></div><div class="value"><a href="#nationalaward">First Prize in the End of Studies Spanish National Awards</a></div>
-        <div class="property">Average grade:</div><div class="value">9.86/10<a href="#grades">**</a> </div>
+        <div class="property">Average grade:</div><div class="value">9.86/10<a href="#grades">***</a> </div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.ehu.eus/">University of the Basque Country (UPV/EHU)</a></div>
         <div class="property">Duration:</div><div class="value">September 2009 - July 2014</div>
       </div>
 
 <span id="grades"></span>
 <br><ul style="list-style-type:none;">
-  <li>*<small>In the German system, grades range from 5.0 (lowest grade) to 1.0 (highest grade).</small></li>
-  <li>**<small>In the Spanish system, grades range from 0 (lowest grade) to 10 (highest grade).</small></li>
+  <li>*<small>In the German system, &ldquo;<i>mit Auszeichnung bestanden</i> (summa cum laude)&rdquo; is the maximum grade of the PhD, which is obtained only when all evaluators give the maximum grade to both the thesis and the presentation.</small></li>
+  <li>**<small>In the German system, grades range from 5.0 (lowest grade) to 1.0 (highest grade).</small></li>
+  <li>***<small>In the Spanish system, grades range from 0 (lowest grade) to 10 (highest grade).</small></li>
 </ul>
    </div>
 <hr>
