--- a/cv_es.html
+++ b/cv_es.html
@@ -124,11 +124,11 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;Doctorado en matemáticas <span style="float:right;"><a href="doctoralthesis_es.html">Tesis doctoral</a></span></h4></div>
+      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;Dr. rer. nat. Mathematik (Doctor en matemáticas)<span style="float:right;"><a href="doctoralthesis_es.html">Tesis doctoral</a></span></h4></div>
         <div class="property">Título de la tesis doctoral:</div><div class="value"><a href="doctoralthesis_es.html"><em>Condition and Homology in Semialgebraic Geometry</em></a></div>
         <div class="property">Supervisores doctorales:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
-        <div class="property">Nota:</div><div class="value"><i>mit Auszeichnung bestanden</i> (cumma cum laude)</div>
+        <div class="property">Nota:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019</div>
@@ -156,8 +156,9 @@
 
 <span id="grades"></span>
 <br><ul style="list-style-type:none;">
-  <li>*<small>En el sistema alemán, el rango de notas va desde 5.0 (nota más baja) hast 1.0 (nota más alta).</small></li>
-  <li>**<small>En el sistema español, el rango de notas va desde 0 (nota más baja) hast 10 (nota más alta).</small></li>
+  <li>*<small>En el sistema alemán, &ldquo;<i>mit Auszeichnung bestanden</i> (summa cum laude)&rdquo; es la máxima nota del doctorado, obtenida solo cuando todes les evaluadores dan la máxima nota tanto a la tesis como a la presentación.</small></li>
+  <li>**<small>En el sistema alemán, el rango de notas va desde 5.0 (nota más baja) hast 1.0 (nota más alta).</small></li>
+  <li>***<small>En el sistema español, el rango de notas va desde 0 (nota más baja) hast 10 (nota más alta).</small></li>
 </ul>
    </div>
 <hr>
@@ -679,10 +680,10 @@
    </div><div class="title">
    <h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
    <div class="year"></div><div class="title">
-   <h4>&ensp;&emsp;<em>(Taller de Investigación en Geometría Algebraica Real Aleatoria</em>)</em></h4></div>
+   <h4>&ensp;&emsp;<em>(Taller de Investigación en Geometría Algebraica Real Aleatoria)</em></h4></div>
      <div class="property">Organizador:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk and Josué Tonelli-Cueto</div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
-     <div class="property">Lugar:</div><div class="value">Güzelyurt, Northern Cyprus</div>
+     <div class="property">Lugar:</div><div class="value">Güzelyurt, Chipre del Norte</div>
      <div class="property">Fecha:</div><div class="value">del 21 al 26 de octubre del 2019</div>
    </div>
 
